# libby

./: README.md  pyproject.toml
libby/: __init__.py  config.py  daemon.py  how_to_create_a_daemon.md  keyword.py  keyword_registry.py  libby.py  rabbitmq_daemon.py  rabbitmq_transport.py  zmq_transport.py
libby/cli/: cli_config.example.yaml  libby_cli.py  lshow.py
peers/: config.yml  peer_a.py  peer_a_rabbitmq.py  peer_b.py  peer_b_rabbitmq.py  peer_c.py  peer_d.py  peer_group.py
